# jurnalyuga

./: .env  Dockerfile  README.MD  alembic.ini  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: docker-image.yml
app/: database.py  dependencies.py  init_db.py  main.py
app/api/endpoints/: day_word.py  day_world.py  pages.py  rss.py  user.py
app/config/: settings.py
app/models/: user.py
app/routes/: rss.py
app/schemas/: rss.py  user.py  words.py
app/static/: index.html
app/static/css/: styles.css
app/templates/: base.html  index.html  login.html  registration.html  rss.html  rss_habr.html  rss_nyt.html  rss_reddit.html
migrations/: env.py
migrations/versions/: 021568addb44_init.py
tests/: conftest.py  readme.md  test_user.py
